# web-tpl-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  buildImage.sh
.run/: RunLocalConfig.run.xml
api/: Cargo.toml
api/src/: demo.rs  errors.rs  global.rs  lib.rs
api/src/dto/: mod.rs  role.rs  user.rs
api/src/endpoint/: demo01.rs  login.rs  mod.rs  role.rs  user.rs
api/src/middleware/: jwt.rs  mod.rs
api/src/rsp/: code.rs  converter.rs  errors.rs  mod.rs  ok.rs  types.rs  wrapper.rs
api/src/util/: cache_key.rs  jwt.rs  mod.rs  redis_util.rs
cache/: Cargo.toml
cache/src/: cluster.rs  keys.rs  lib.rs  standalone.rs
common/: Cargo.toml
common/src/: cfg.rs  consts.rs  lib.rs
common/src/demo01/: mod.rs
common/src/util/: mod.rs  pwd_util.rs
config/: application.toml
db/: .env  Cargo.toml  gen-entity.ps1
db/src/: lib.rs
db/src/entities/: auth_role.rs  auth_user.rs  link_user_role.rs  mod.rs  prelude.rs
src/: main.rs
