[package]
name = "web-tpl"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    ".", "api", "common"
]

[dependencies]
api = { path = "api" }

[workspace.dependencies]
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
serde = "1"
actix-web = "4"

log = "0.4"
flexi_logger = { version = "0.29", features = ["async", "specfile", "compress"] }
#slog = "2.7"
#slog-async = "2.7"
#slog-term = "2.7"
