[package]
name = "web-tpl"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    ".", "api", "cache", "common", "db"
]

[dependencies]
api = { path = "api" }
common = { path = "common" }
cache = { path = "cache" }

[package.metadata.packager]
files = ["config/application.toml"]

[workspace.dependencies]
thiserror = "2.0.11"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
utoipa-actix-web = "0.1.2"
serde = "1"
serde_json = "1"
actix-web = "4"
validator = "0.20"
validator_derive = "0.20"

config = "0.14.0"
log = "0.4"
flexi_logger = { version = "0.29", features = ["async", "specfile", "compress"] }
#slog = "2.7"
#slog-async = "2.7"
#slog-term = "2.7"

sea-orm = { version = "1.1.6", features = [
    "sqlx-postgres", "runtime-tokio-native-tls",
    "macros", "postgres-array", "with-json",
] }
redis = { version = "0.29", features = ["cluster-async", "cluster", "r2d2", "tokio-comp"] }

r2d2 = { version = "0.8.10" }
bcrypt = "0.17"

jsonwebtoken = "9.3.1"
