[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

actix-web = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-actix-web = { workspace = true }
serde = { workspace = true }

log = { workspace = true }
flexi_logger = { workspace = true }
#slog = { workspace = true }
#slog-async = { workspace = true }
#slog-term = {workspace = true}
