[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
sea-orm = {workspace = true}

thiserror = { workspace = true }

actix-web = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
validator_derive = { workspace = true }

bcrypt = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
#slog = { workspace = true }
#slog-async = { workspace = true }
#slog-term = {workspace = true}
